--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Part 1: Data structure and algorithm – simple data type AND Part 2 – Using
-      basic data structures – Objects
+      Part 1: Data structure and algorithm - simple data type AND Part 2: Using
+      basic data structures - Objects
     </title>
   </head>
   <body>
